<resources>
    <string name="adMobAppID" translatable="false">"ca-app-pub-4745986453153369~5538117624"</string>
    <string name="adMobMainAdID" translatable="false">"ca-app-pub-4745986453153369/5747793194"</string>
    <string name="adMobCurrAdID" translatable="false">"ca-app-pub-4745986453153369/7360257768"</string>
    <string name="adMobTraderAdID" translatable="false">"ca-app-pub-4745986453153369/4737963859"</string>
    <string name="adMobRewardVidID" translatable="false">"ca-app-pub-4745986453153369/7680126192"</string>
    <string name="adMobAppIDTest" translatable="false">"ca-app-pub-3940256099942544~3347511713"</string>
    <string name="adMobMainAdIDTest" translatable="false">"ca-app-pub-3940256099942544/1033173712"</string>
    <string name="adMobBannerAdIDTest" translatable="false">"ca-app-pub-3940256099942544/6300978111"</string>
    <string name="adMobRewardVidIDTest" translatable="false">"ca-app-pub-3940256099942544/5224354917"</string>
    <string name="app_name" translatable="false">Proto</string>
    <string name="currMessage" translatable="false">Tax rate value doesn\'t take effect until the button is toggled or the focus is changed.</string>
    <string name="taxButtonOn">STOP TAXING</string>
    <string name="taxButtonOff">START TAXING</string>
    <string name="taxrate">RATE %</string>
    <string name="currControl">Currency Control</string>
    <string name="create">Create</string>
    <string name="destroy">Destroy</string>
    <string name="finstim">Financial Stimulus</string>
    <string name="dist">Distribute</string>
    <string name="currSpinDistLAB">Send stimulus to Labor</string>
    <string name="currSpinDistFOOD">Send stimulus to Food industry</string>
    <string name="currSpinDistTOOL">Send stimulus to Tool industry</string>
    <string name="currSpinDistCOAL">Send stimulus to Coal industry</string>
    <string name="currSpinDistIRON">Send stimulus to Iron industry</string>
    <string name="currSpinDistSHIP">Send stimulus to Shipping industry</string>
    <string name="currErr1">Enter a value above 0</string>
    <string name="currErr2">Invalid value</string>
    <string name="stimDist">Stimulus distributed</string>
    <string name="val0to100">Enter a number between 0 and 100.</string>
    <string name="val0to1000000">Enter a number between 0.01 and 1,000,000.</string>
    <string name="moneyCreated">" new money created"</string>
    <string name="moneyDestroyed">" money destroyed"</string>
    <string name="insFunds">Insuffecient funds</string>
    <string name="checkBal">Check your account balance.</string>
    <string name="currSymbol">" $"</string>
    <string name="exit">Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="simreset">Simulator reset</string>
    <string name="SPEEDON">SPEED ON!</string>
    <string name="SPEEDOFF">SPEED OFF</string>
    <string name="tapgraphspread">Slide to change the graph\'s spread. Tap to make infinite.</string>
    <string name="mmap">Map</string>
    <string name="graph">Graph</string>
    <string name="trade">Trade</string>
    <string name="currency">Currency</string>
    <string name="stats">Statistics</string>
    <string name="iinfo">Information</string>
    <string name="reset">Reset</string>
    <string name="unlock">Unlock</string>
    <string name="computing">"\nCOMPUTING...\nTHIS COULD TAKE A MINUTE\n"</string>
    <string name="buy0">Now at market value</string>
    <string name="buy1">Price is below [set price]</string>
    <string name="buy2">Price is above [set price]</string>
    <string name="sell0">Now at market value</string>
    <string name="sell1">Now at [set price]</string>
    <string name="sell2">Now at [set price] above market value</string>
    <string name="sell3">Now at [set price] below market value</string>
    <string name="sell4">Price is below [set price]</string>
    <string name="sell5">Price is above [set price]</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="food">Food</string>
    <string name="tools">Tools</string>
    <string name="coal">Coal</string>
    <string name="iron">Iron</string>
    <string name="setprice">[set price]</string>
    <string name="buyingfood">Buying food </string>
    <string name="buyingtools">Buying tools </string>
    <string name="buyingcoal">Buying coal </string>
    <string name="buyingiron">Buying iron </string>
    <string name="sellingfood">Selling food </string>
    <string name="sellingtools">Selling tools </string>
    <string name="sellingcoal">Selling coal </string>
    <string name="sellingiron">Selling iron </string>
    <string name="selectOptionsToBuy">Select options to buy</string>
    <string name="selectOptionsToSell">Select options to sell</string>
    <string name="setPrice">Set Price</string>
    <string name="order">ORDER</string>
    <string name="cancel">CANCEL</string>
    <string name="laborPrice">"Labor   :"</string>
    <string name="foodPrice">"\nFood    :"</string>
    <string name="toolPrice">"\n\nTool    :"</string>
    <string name="coalPrice">"\n\n\nCoal    :"</string>
    <string name="ironPrice">"\n\n\n\nIron    :"</string>
    <string name="shipPrice">"\n\n\n\n\nShipping:"</string>
    <string name="transCount">"\n\n\n\n\n\nTransaction count: "</string>
    <string name="gdp">"Total value of transactions:"</string>
    <string name="totalCurr">"Total currency in economy  :"</string>
    <string name="acctBal">"Your acct bal:           "</string>
    <string name="stockBanner">Your stock---------------</string>
    <string name="foodStock">"Food:         "</string>
    <string name="toolStock">"Tool:         "</string>
    <string name="coalStock">"Coal:         "</string>
    <string name="ironStock">"Iron:         "</string>
    <string name="lcSpacer" translatable="false">"   "</string>
    <string name="popCount">"   Labor\n   population"</string>
    <string name="assetBanner">"ASSESTS OF TRADERS\n"</string>
    <string name="banksumBanner">"Bank sums\n"</string>
    <string name="bsLabor">"Labor   :"</string>
    <string name="bsFood">"Food    :"</string>
    <string name="bsTool">"Tool    :"</string>
    <string name="bsCoal">"Coal    :"</string>
    <string name="bsIron">"Iron    :"</string>
    <string name="bsShip">"Shipping:"</string>
    <string name="stockBanner2">"Stock---------------"</string>
    <string name="sLabor">"Labor:        "</string>
    <string name="sFood">"Food :        "</string>
    <string name="sTool">"Tool :        "</string>
    <string name="sCoal">"Coal :        "</string>
    <string name="sIron">"Iron :        "</string>
    <string name="comSumBanner">"COMMODITY SUMS\n"</string>
    <string name="totalBanner">"Total produced"</string>
    <string name="tpLabor">"Labor    : "</string>
    <string name="tpFood">"Food     : "</string>
    <string name="tpTool">"Tool     : "</string>
    <string name="tpCoal">"Coal     : "</string>
    <string name="tpIron">"Iron     : "</string>
    <string name="tpShip">"Shipping : "</string>
    <string name="currExBanner">"Currently exisiting"</string>
    <string name="cxLabor">"Labor    :        "</string>
    <string name="cxFood">"Food     :        "</string>
    <string name="cxTool">"Tool     :        "</string>
    <string name="cxCoal">"Coal     :        "</string>
    <string name="cxIron">"Iron     :        "</string>
    <string name="cxShip">"Shipping :        "</string>
    <string name="menuPrices">"Supply &amp; Demand"</string>
    <string name="fullScreen">"Full View"</string>
    <string name="howto">"This is a quick HOW TO. More will be added later.

Establish Baseline.
The economic baseline is considered to be the scenario where debt levels remain stable, price discovery is fully established meaning prices remain within a specific range, and labor is in abundance. On some economy maps such as the one named 'classic', the economy will suffer a CREDIT CRUNCH to the point of complete shutdown before a true baseline is established. This is due to their only being $100 in hard currency to start with. It is recommended to create $5000 and let it run in high speed mode for several minutes to establish economic baseline. Once baseline is established, begin experimentation.

Create Currency.
Go to the CURRENCY menu, scroll down and type in the amount of hard currency you wish to create. This new currency will be added to your account balance. It will also be available to the credit market so if there is a demand for credit, you should expect to see debt levels rise and some inflation.

Trade
Go to the TRADE menu, select which commodities you wish to buy or sell and add them to the list. There are several options which act as triggers. It is recommended you only select NOW AT MARKET VALUE, or AT SET PRICE. The other options are tricky and may not work as expected. This type of trade will buy or sell based on supply and demand. You will have to compete for available resources with other traders.

Priority Order
Go to the SPECIAL ORDERING menu, select the commodity you wish to order and enter the quantity. This type of ordering is complex and requires sufficient credit from the bank. Lack of available credit for traders to borrow will stall the economy and the order chain will break down requiring you for break all obligations.

Create Inflation
Go to the CURRENCY menu, create new currency, and spend or distribute it into the economy. Inflation can also occur without spending or distribution when there is a demand for credit and new currency sits in your account. That money will be loaned out to traders as CENTRAL BANK RESERVE but still available in your account for spending and distribution.

Induce Deflation.
Go to the BANKING menu, increase the reserve requirement to 100%. This will pull back the credit market. Then tax the economy to further decrease the available circulating currency. This may stall the economy and is tricky to accomplish successfully.

Establish Welfare
Go to the TRADE menu. BUY a commodity such as food at market value, then SELL the commodity at as SET PRICE of $0.00. Go to the CURRENCY menu, establish a TAX of appropriate percentage, such as UNIVERSAL 10%. This tax will fund the welfare program.
"
</string>
</resources>