<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<!--            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"-->
<!--                android:id="@+id/adViewCurr"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                ads:adSize="SMART_BANNER"-->
<!--                ads:adUnitId="ca-app-pub-4745986453153369/7360257768" />-->

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currMessage"
                android:visibility="gone"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/txtTaxCodeSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select tax code to modify"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <Spinner
                android:id="@+id/spinnerTaxCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/taxrate"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/taxRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="5"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:text="0.0" />

                <Button
                    android:id="@+id/setTaxbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="SET" />
            </LinearLayout>

            <ToggleButton
                android:id="@+id/taxButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ToggleButton"
                android:textOff="@string/taxButtonOff"
                android:textOn="@string/taxButtonOn" />

            <EditText
                android:id="@+id/editTextTaxList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currControl"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/currAmountTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:text="0.00" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create" />

                <Button
                    android:id="@+id/btnDestroy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/destroy" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finstim"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/currAmountStim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:text="0.00" />

                <Button
                    android:id="@+id/btnStim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dist" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:visibility="visible" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>